# journey-model-parser

./: .flake8  .gitignore  Cargo.toml  LICENSE  blender_import.py  readme.md  shell.nix
.github/workflows/: ci.yml  release.yml
docs/: linux.md  readme.md  windows.md
src/: entity.rs  error.rs  ffi.rs  lib.rs  object.rs  parse.rs  structure.rs
